--- a/Src/Style.css
+++ b/Src/Style.css
@@ -1,18 +1,38 @@
 h1 {text-align:center}
 
 #index-h2-header{
+    color:rgb(27, 15, 56);
+    font-weight: 300;
     text-align:center;
     padding-top: 2%;
     padding-bottom:2%;
 }
 
+#product-section{
+    background: linear-gradient(360deg, rgb(155, 187, 201) 0%, rgba(200,221,220,1) 39%, rgba(233,239,239,1) 75%, rgba(255,255,255,1) 100%); 
+}
 .card{
     margin: 0 auto; /* Added */
     float: none; /* Added */
     margin-bottom: 10px; /* Added */
+    
 }
-
+.card-body{
+    background-color: transparent !important;
+}
 #link-text{
     color: black;
     text-decoration: none;
+}
+#price-text{
+    color: red;
+    text-decoration: none;
+}
+
+.card-title{
+    margin-bottom: 0%;
+    font-weight: 600;
+}
+.card-text{
+    margin-bottom: 0%;
 }
