--- a/Src/Style.css
+++ b/Src/Style.css
@@ -1,1 +1,48 @@
-h1 {text-align:center}
+body{
+    margin: 0;
+    padding: 0px;
+}
+
+.background{
+    width: 100%;
+    height: 65vh;
+    background-image: url(../Images/Gw.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: space-around;
+    align-content: space-between;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20pt;
+    position: relative;
+    top: 330px;
+  }
+
+  .flex-item { 
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 37px;
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 500px;
+
+  }
+  .flex-item2 {
+    margin-top: auto;
+    margin-bottom: auto;
+    background-color: rgba(255, 255, 255, 0.85);
+    width: 500px;
+    margin-top: 50px;
+  }
+
+  .flex-item2:hover{
+    box-shadow: 0 0 2px 1px rgba(0, 0,0, 1);
+    color: black;
+}
+
