--- a/Src/Style.css
+++ b/Src/Style.css
@@ -3,6 +3,7 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 
 h1 {text-align:center}
@@ -81,6 +82,11 @@ body{
     width: 500px;
 
   }
+
+  .flex-item p{
+    font-family: 'Gloock';
+
+  }
   .flex-item2 {
     margin-top: auto;
     margin-bottom: auto;
@@ -93,6 +99,10 @@ body{
     box-shadow: 0 0 2px 1px rgba(0, 0,0, 1);
     color: black;
 }
+.flex-item2 p{
+    font-family:'Josfin sans, sans-serif';
+    font-weight: 100;
+}
 
 
 
@@ -100,7 +110,7 @@ header.nav {
     display: flex;
     height: 40px;
     width: 100%;
-    background-color:#0677c2;
+    background-color:#d1d9dfdb;
     align-items: center;
     justify-content: space-between;
     position: relative;
@@ -122,6 +132,8 @@ header.nav .logo img {
 }
 
 header.nav .title {
+    font-family: 'Gloock';
+    font-weight: 300;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -158,7 +170,7 @@ header.nav .information .basket {
 .fill {
     position: absolute;
     inset: 0;
-    background-color: #000;
+   /* background-color: #000;*/
 }
 
 .fill img {
