--- a/Src/allPoster.css
+++ b/Src/allPoster.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-h6{
+#sidenav-header{
     font-family: Gloock ,Verdana, Geneva, Tahoma, sans-serif;
     border-bottom: 1px solid black;
     font-weight: 300 !important;
@@ -10,7 +10,7 @@ h6{
 
 .col-2{
     background-color: #DFE7EC;
-    height: 100%;
+    
 }
 
 #main-container{
