Added Products to allPosters.html

--- a/Src/allPoster.css
+++ b/Src/allPoster.css
@@ -24,3 +24,8 @@
     font-family: Gloock ,Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2rem !important;
 }
+
+img{
+    width:100px;
+    height:400px;
+}
