filters working on test

--- a/Src/allPoster.css
+++ b/Src/allPoster.css
@@ -17,6 +17,14 @@
     min-height: 100vh;
 }
 
+.filterDiv{
+   display: block;
+}
+
+.hide{
+    display: none;
+}
+
 .lead{
     font-size: 0.9rem !important;
 }
