--- a/Src/allPoster.css
+++ b/Src/allPoster.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+h3{
+  font-family: 'Gloock';
+}
 #sidenav-header{
     font-family: Gloock ,Verdana, Geneva, Tahoma, sans-serif;
     border-bottom: 1px solid black;
@@ -48,4 +51,10 @@
 img{
     width:100px;
     height:400px;
+}
+
+@media screen and (max-width: 990px) {
+  .sidenav {
+    margin-top: 0% !important;
+  }
 }
